fixing text alignment

--- a/index.css
+++ b/index.css
@@ -54,5 +54,6 @@ html {
 .container-about-text {
   position: absolute;
   left:50%;
-  right: 10%
+  right: 10%;
+  text-align: justify;
 }
